AC and Del stlying

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   
     <section class="container">
-        
+
         <form >
             <input type="text" class="input">
         </form>
@@ -32,8 +32,8 @@
         <button class="btn">0</button>
         <button class="btn">.</button>
         <button class="btn">=</button>
-        <button class="btn btngray">AC</button>
-        <button class="btn btnred">DEL</button>
+        <button class="btngray">AC</button>
+        <button class="btnred">DEL</button>
         <button class="btn">00</button>
         <button class="btn">%</button>
         
