AC and Del stlying

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <button class="btn">1</button>
         <button class="btn">0</button>
         <button class="btn">.</button>
-        <button class="btn">=</button>
+        <button class="btn">%</button>
         <button class="btngray">AC</button>
         <button class="btnred">DEL</button>
         <button class="btn">00</button>
-        <button class="btn">%</button>
-        
+        <button class="btn btnyellow1">=</button>
+
         </div>
             
     </section>
